# etf-matcher

./: .coderabbit.yaml  .dockerignore  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  BUILD-RUN.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  build.sh  data.json  docker-compose.yml  index.html  package-lock.json  package.json  run.sh  tsconfig.json  vite.config.js  vite.config.ts  vite.logger.ts  vitest.config.js  vitest.config.ts
.github/workflows/: build-prod.yml
custom_vite_plugins/: posthtml-remove-comments.cjs
docker_build_helpers/: README.md  build_rust_backend.sh  build_rust_frontend.sh  encode_data.sh  encrypt_password.sh  extract_and_clean_datapacks.sh  generate_data_build_info.sh  generate_env.sh  import_datapacks.sh  inotify_rust.sh  inotify_rust_frontend.sh  validate_docker_env.sh
encrypt_tool/: Cargo.toml
encrypt_tool/src/: main.rs
public/: buildTime.json  index.html  manifest.json  robots.txt  worker.js
rust/: Cargo.toml  build.rs  ticker_vector_configs.toml  ticker_vectors_config.toml
rust/src/: config.rs  constants.rs  data_models.old.rs  data_models.rs  data_models.rs.old  data_url.rs  lib.rs  types.rs  utils.rs  utils.rs.old
rust/src/data_models/: data_build_info.rs  data_url.rs  etf_aggregate_detail.rs  etf_holding_ticker.rs  exchange.rs  exchange_by_id.rs  image.rs  industry.rs  industry_by_id.rs  mod.rs  old.ticker_vector_analysis.rs  paginated_results.rs  sector.rs  sector_by_id.rs  symbol_by_id.rs  symbol_detail.rs  symbol_etf_holder.rs  symbol_search.rs  ticker_10k_detail.rs  ticker_10k_detail.rs.TODO  ticker_bucket.rs  ticker_by_id.rs  ticker_by_id.rs.OLD  ticker_detail.rs  ticker_etf_holder.rs  ticker_search.rs  ticker_similarity_search_adapter.rs  ticker_tracker.rs  ticker_vector_analysis.rs  ticker_vector_config.rs
rust/src/data_models/flatbuffers/: financial_vectors.tenk_generated.rs  mod.rs
rust/src/flatbuffers/: etfmatcher.tenk_generated.rs  mod.rs
rust/src/utils/: cache.rs  decrypt.rs  extract_logo_filename.rs  fetch.rs  fetch_and_decompress.rs  levenshtein_distance.rs  mod.rs  network_cache.rs  notifier.rs  parse.rs  shard.rs  shard_ng.rs  shared_network_cache.rs  symbol_trait.rs  ticker_utils.rs  ticker_vector_config_utils.rs  uncompress_logo_filename.rs  xhr_fetch.rs  xhr_utils.rs
rust/temp_ticker_sniffer_PROTOTYPE/test_utils/: constants.rs
src/: App.tsx  appTheme.ts  constants.ts  lib.rs  main.tsx  manifest.template.json  router.tsx  store.ts  theme.ts  types.ts  vite-env.d.ts  worker.d.ts  worker.ts
src/assets/: sectorColors.ts
src/components/: AppErrorBoundary.tsx  BucketImportExportDialogModal.tsx  BucketImportFileDropModal.tsx  BucketList.tsx  DeleteEntityDialogModal.tsx  DialogModal.tsx  DimensionOverlayDebugger.tsx  EncodedImage.tsx  FakeButton.tsx  FinancialBarLineChart.tsx  FullContainer.tsx  FullTextField.tsx  Layout.tsx  LinkButton.tsx  LockScreen.tsx  LogarithmicSlider.tsx  LogoButton.tsx  LogoNavButton.tsx  MockAutoComplete.tsx  NetworkRequestNotifier.tsx  NoInformationAvailableAlert.tsx  PCAScatterPlot.tsx  PROTO_P2P.tsx  PROTO_PieChart.tsx  PROTO_SVG  PROTO_Table.tsx  PortfolioForm.tsx  PortfolioForm.tsx.old  QRCode.tsx  (+25 more)
test/: README.md  customRender.ts  customRender.tsx  global.MockIndexedDB.ts  global.MockIntersectionObserver.ts  global.MockResizeObserver.ts  global.MockWorker.ts  setupTests.ts
vite/: common_prestart.ts
(+588 files in other folders)
