[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["XmlHttpRequest", "XmlHttpRequestResponseType", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.2"
flate2 = "1.0"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
aes = "0.7"
block-modes = "0.8"
hmac = "0.11"
pbkdf2 = "0.9"
sha2 = "0.9"
hex-literal = "0.3"
dotenv_codegen = "0.15"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
lazy_static = "1.4"
futures = "0.3"
async-trait = "0.1"

[build-dependencies]
dotenv = "0.15"
hex = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
