[package]
name = "etf-matcher"
version = "0.1.0"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2018"
build = "build.rs"
description = "Discover ETFs that most closely match your investment goals."
repository = "https://github.com/jzombie/etf-matcher"
license = "MIT"
publish = false

[dependencies]
config = "0.14.1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["XmlHttpRequest", "XmlHttpRequestResponseType", "console"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
serde-wasm-bindgen = "0.2"
flate2 = "1.0"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
aes = "0.7"
block-modes = "0.8"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
hex-literal = "0.3"
dotenv_codegen = "0.15"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
lazy_static = "1.4"
futures = "0.3"
async-trait = "0.1.81"
regex = "1.10.5"
base64 = "0.21.0"
image = "0.25.2"
qrcode-generator = "4.1.9"
chrono = { version = "0.4.38", features = ["serde"] }
indexmap = "2.6.0"
levenshtein = "1.0.5"
ticker-sniffer = "=0.1.0-alpha9"
ticker-similarity-search = "=0.1.0-alpha6"

[build-dependencies]
dotenv = "0.15"
hex = "0.4"
toml = {version = "0.8.19", features = ["preserve_order"] }
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
indexmap = "2.6.0"

[lib]
crate-type = ["cdylib", "rlib"]
